--- a/src/public/toss.html
+++ b/src/public/toss.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <!-- 결제위젯 SDK 추가 -->
   <script src="https://js.tosspayments.com/v1/payment-widget"></script>
-</head>
+  <link rel="shortcut icon" type="image⁄x-icon" href="https://cdn-icons-png.flaticon.com/256/5857/5857151.png">
 <body>
   <!-- 결제위젯, 이용약관 영역 -->
   <div id="payment-method"></div>
@@ -23,7 +23,7 @@
       // 결제수단 UI를 렌더링할 위치를 지정합니다. `#payment-method`와 같은 CSS 선택자와 결제 금액 객체를 추가하세요.
       // DOM이 생성된 이후에 렌더링 메서드를 호출하세요.
       // https://docs.tosspayments.com/reference/widget-sdk#renderpaymentmethods선택자-결제-금액-옵션
-      paymentWidget.renderPaymentMethods('#payment-method', { value: 50 });
+      paymentWidget.renderPaymentMethods('#payment-method', { value: 15000 });
       // ------  이용약관 렌더링 ------
       // 이용약관 UI를 렌더링할 위치를 지정합니다. `#agreement`와 같은 CSS 선택자를 추가하세요.
       // https://docs.tosspayments.com/reference/widget-sdk#renderagreement선택자
@@ -33,8 +33,8 @@
       // https://docs.tosspayments.com/reference/widget-sdk#requestpayment결제-정보
       button.addEventListener('click', function () {
           paymentWidget.requestPayment({
-              orderId: '4TITFDV0Qqs0xzmtqqtjD65', // 주문 ID(직접 만들어주세요)
-              orderName: '토스 티셔츠 외 65건', // 주문명
+              orderId: '4TITFDV0Qqs0xzmtqqtjD62', // 주문 ID(직접 만들어주세요)
+              orderName: '토스 티셔츠 외 62건', // 주문명
               successUrl: 'http://localhost:3090/api/payments/success', // 결제에 성공하면 이동하는 페이지(간단하게 직접 만들었다)
               failUrl: 'http://localhost:3090/api/fail', // 결제에 실패하면 이동하는 페이지(어차피 에러니까 안 만들었다)
               customerEmail: 'customer123@gmail.com',
